--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "grunt-postcss": "^0.8.0",
     "grunt-saucelabs": "^9.0.0",
     "grunt-webpack": "^1.0.11",
+    "rollup-plugin-livereload": "^0.4.0",
+    "rollup-plugin-serve": "^0.1.0",
+    "rollup-watch": "^3.2.2",
     "time-grunt": "^1.3.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
