--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "scripts": {
     "test": "grunt test",
-    "build": "grunt build"
+    "build": "grunt build",
+    "dev": "node ./tests/dev-server.js"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
@@ -47,7 +48,6 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-less": "^1.2.0",
