--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "grunt-postcss": "^0.8.0",
     "grunt-saucelabs": "^9.0.0",
     "grunt-webpack": "^1.0.11",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "rollup-plugin-livereload": "^0.4.0",
     "rollup-plugin-serve": "^0.1.0",
     "rollup-watch": "^3.2.2",
